--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
 {
   "scripts": {
-    "prisma:generate": "prisma generate",
-    "prisma:dbpush": "prisma db push",
-    "start": "nodemon index.js",
-    "devStart": "nodemon index.js",
-    "dev": "yarn prisma:generate && yarn prisma:dbpush && yarn devStart",
-    "build": " yarn install && yarn prisma:generate && yarn prisma:dbpush && nodemon index.js"
+    "start": "node index.js",
+    "devStart": "nodemon index.js"
   },
   "devDependencies": {
     "@types/bun": "latest"
@@ -18,8 +14,6 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "nodemailer": "^6.9.13",
-    "nodemon": "^3.1.2",
-    "prisma": "^5.14.0",
     "stripe": "^15.8.0"
   }
 }
