--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "@prisma/client": "^5.14.0",
+    "@prisma/client": "^5.15.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "nodemailer": "^6.9.13",
-    "stripe": "^15.8.0"
+    "qrcode": "^1.5.3"
   }
 }
